syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "OperationSuccessProto";

enum OpSuccess {
  MASTER_CREATED = 0;
}

message OperationSuccess {
  OpSuccess code = 1;
}
